A no arg constructor is required for JPA, not Jackson

--- a/affordances/README.adoc
+++ b/affordances/README.adoc
@@ -59,7 +59,7 @@ Here is the basic definition:
 ----
 @Data
 @Entity
-@NoArgsConstructor(access = AccessLevel.PRIVATE)
+@NoArgsConstructor(access = AccessLevel.PROTECTED)
 @AllArgsConstructor
 class Employee {
 
